# BitterHarmony

./: Cargo.toml
src/: constants.rs  lib.rs
src/Client/: mod.rs  requester.rs
src/Ext/: commander.rs  extension.rs
src/client/: default.rs  handler.rs  mod.rs  requester.rs
src/event/: context.rs  mod.rs
src/ext/: commander.rs  context.rs  extension.rs  mod.rs
src/gateway/: runner.rs
tests/: atob.rs
