[package]
name = "bitter_harmony"
version = "0.1.0"
authors = ["Kyando2 <amehikoji@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11.2", features = ["blocking", "json"]}
tungstenite = "0.13.0"
serde_json = "1.0"
url = "2.1.0"


